Templates/k8s-yaml-examples/namespace.yaml
# A basic Namespace definition
apiVersion: v1
kind: Namespace
metadata:
  name: example-namespace
